.tanzu/config/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tanzu-java-web-app-route
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/tanzu-java-web-app
    healthcheck.gslb.tanzu.vmware.com/service: tanzu-java-web-app
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-tanzu-java-web-app
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: tanzu-java-web-app
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
